force-app/main/default/objects/DeletedOpportunityProduct__c/DeletedOpportunityProduct__c.object-meta.xml
<CustomObject>
    <label>Deleted Opportunity Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>