force-app/main/default/objects/DeletedOpportunityProduct__c/fields/DeletedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DeletedOpportunity__c</fullName>
    <label>Deleted Opportunity</label>
    <referenceTo>DeletedOpportunity__c</referenceTo>
    <relationshipLabel>Deleted Opportunity Products</relationshipLabel>
    <relationshipName>Deleted_Opportunity_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>