force-app/main/default/objects/DeletedOpportunityProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Deleted Opportunity Products</relationshipLabel>
    <relationshipName>Deleted_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>